--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,3 +26,42 @@ h2{
 .btn-with-full-width{
     width: 100%;
 }
+#search-form{
+    display: inline !important;
+}
+
+
+
+/* carousel */
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item.active {
+  display: flex;
+}
+.carousel-caption {
+  position: absolute;
+  top: 0;
+}
+
+.carousel-caption h2 {
+  color: #fff;
+  display: inline-block !important;
+}
+
+.carousel img {
+  height: 300px;
+  padding: 14px;
+  margin:60px;
+  border-radius: 10%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.carousel a {
+  margin: 0 auto;
+}
+@media (max-width: 900px) {
+  .carousel-caption h2 {
+    font-size: 2.5vw;
+  }
+}
+
